Updated pilatus and windows config

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -1,3 +1,7 @@
+# ------------------------------------------------------------------------
+# General Configuration
+# ------------------------------------------------------------------------
+
 # Path where the logfile will be created
 #log_path = /opt/hidra/logs
 log_path = /var/log/hidra
@@ -15,16 +19,16 @@ procname = hidra
 ext_ip = 0.0.0.0
 #ext_ip = asap3-p00
 
-# List of hosts allowed to connect
-# Nobody is allowed to connect
+# List of hosts allowed to connect. Options are:
+# [] - Nobody is allowed to connect
+# [<host>, <host>] - The hosts in the list are allowed to connect.
+# None - Everybody is allowed to connect.
 #whitelist = []
-# The hosts in the list are allowed to connect
 #whitelist = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "lsdma-lab04"]
-# Everybody is allowed to connect
 whitelist = None
 
 # ----------------------------------------------------------------------------
-#   eventdetector Configuration
+# EventDetector Configuration
 # ----------------------------------------------------------------------------
 
 # Type of event detector to use (options are:
@@ -131,24 +135,23 @@ store_data = True
 local_target = /opt/hidra/data/target
 #local_target = /gpfs
 
-# Flag describing if the files should be removed from the source
-# options are:
+# Should the files be removed from the source. Options are:
 # True - data stays on the source
 # False - data is removed from the source after processing it
 # stop_on_error - only supported if use_data_stream is enabled;
 #                 datamanager gets a feedback if the data writing was
-#                 successful
+#                 successful.
+#                 When an error occurs the datamanager goes into error state
+#                 till it gets a notification that the error on the data
+#                 receiving side was handled.
 # with_confirmation - only supported if use_data_stream is enabled and
 #                     data_fetcher_type is file_fetcher or http_fetcher;
 #                     data is removed from the source only after the target
-#                     sent a verification
-# (needed if data_fetcher_type is file_fetcher or http_fetcher)
+#                     sent a verification.
+#                     In case that a file could not be transfered, it is not
+#                     removed from the source. Here the datamanager does not go
+#                     in error state and new files are transfered if possible.
 #remove_data = True
 remove_data = False
-# When an error occurs the datamanager goes into error state till it gets
-# notification that the error on the data receiving side was handled.
 #remove_data = stop_on_error
-# In case that a file could not be transfered, it is not removed from the source
-# Here the datamanager does not go in error state and new files are transfered
-# if possible.
 #remove_data = with_confirmation
