--- a/conf/datamanager_pilatus.conf
+++ b/conf/datamanager_pilatus.conf
@@ -1,42 +1,31 @@
 # ------------------------------------------------------------------------
-# Logging Configuration
+# General Configuration
 # ------------------------------------------------------------------------
 
 # Path where the logfile will be created
-log_path            = /var/log/hidra
+log_path = /var/log/hidra
 
 # Filename used for logging
-log_name            = datamanager.log
+log_name = datamanager.log
 
-# File size before rollover in B (linux only)
-# 10 MB
-log_size            = 10485760
+# User as which the service should be running
+username = hidrauser
 
 # Name with which the service should be running
-procname            = hidra
+procname = hidra
 
 # IP/DNS name of the interface to bind to for external communication
-ext_ip              = 0.0.0.0
+ext_ip = 0.0.0.0
 
-# ------------------------------------------------------------------------
-# SignalHandler Configuration
-# ------------------------------------------------------------------------
+# List of hosts allowed to connect. Options are:
+# [] - Nobody is allowed to connect
+# [<host>, <host>] - The hosts in the list are allowed to connect.
+# None - Everybody is allowed to connect.
+whitelist = ["localhost"]
 
-# Port number to receive signals from
-com_port            = 50000
-
-# List of hosts allowed to connect
-whitelist           = ["localhost"]
-
-# Ldap node and port needed to check whitelist
-ldapuri = it-ldap-slave.desy.de:1389
-
-# ZMQ port to get new requests
-request_port        = 50001
-
-# ------------------------------------------------------------------------
+# ----------------------------------------------------------------------------
 # EventDetector Configuration
-# ------------------------------------------------------------------------
+# ----------------------------------------------------------------------------
 
 # Type of event detector to use (options are:
 # inotifyx_events, watchdog_events, zmq_events, http_events)
@@ -44,63 +33,77 @@ request_port        = 50001
 # see https://bugs.launchpad.net/inotifyx/+bug/1006053
 event_detector_type = inotifyx_events
 
-# Subdirectories to be monitored and to store data to. These directory have to
-# exist when HiDRA is started and should not be removed during the run.
-# (needed if eventDetector is inotifyx_events or watchdog_events
-#  or if dataFetcher is file_fetcher)
-fix_subdirs          = ["commissioning/raw", "commissioning/scratch_bl",
-                        "current/raw", "current/scratch_bl",
-                        "local"]
-
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current"
 # and "local" are monitored
 # (needed if event detector is inotifyx_events or watchdog_events)
-monitored_dir       = /ramdisk
+monitored_dir = /ramdisk
+
+# Subdirectories to be monitored and to store data to. These directory have to
+# exist when HiDRA is started and should not be removed during the run.
+# (needed if event_detector is inotifyx_events or watchdog_events
+#  or if data_fetcher is file_fetcher)
+fix_subdirs = ["commissioning/raw", "commissioning/scratch_bl",
+               "current/raw", "current/scratch_bl",
+               "local"]
+
+# Flag describing if the subdirectories should be created if they do not exist.
+# This does not affect http_events, hidra_events, zmq_events since they do not
+# use the monitored_dir variable
+create_fix_subdirs = False
 
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
-# (needed if event detector is inotifyx_events or watchdog_events)
-monitored_events     = {"IN_MOVED_TO": [".tif", ".cbf", ".img", ".edf"],
-                        "IN_CLOSE_WRITE": [".log"]}
+# (needed if event_detector is inotifyx_events or watchdog_events)
+monitored_events = {"IN_MOVED_TO": [".tif", ".cbf", ".img", ".edf"],
+                    "IN_CLOSE_WRITE": [".log"]}
 
 # Number of events stored to look for doubles
-# (needed if eventDetector is inotifyx_events or http_events)
-history_size         = 0
+# (needed if event_detector is inotifyx_events or http_events)
+history_size = 0
 
 # Flag describing if a clean up thread which regularly checks
 # if some files were missed should be activated
-# (needed if eventDetector is inotifyx_events)
-use_cleanup          = False
+# (needed if event_detector is inotifyx_events)
+use_cleanup = False
 
-# ------------------------------------------------------------------------
+# ----------------------------------------------------------------------------
 # DataFetcher Configuration
-# ------------------------------------------------------------------------
+# ----------------------------------------------------------------------------
 
 # Module with methods specifying how to get the data
 # (options are "file_fetcher", "zmq_fetcher", "http_fetcher")
-data_fetcher_type    = file_fetcher
-
-# Number of parallel data streams
-number_of_streams    = 4
+data_fetcher_type = file_fetcher
 
 # Enable ZMQ pipe into storage system
-# (uses data_stream_targets)
-use_data_stream      = True
+use_data_stream = True
+
+# Number of parallel data streams
+number_of_streams = 4
+
 # Fixed host and port to send the data to with highest priority
-data_stream_targets  = [["asap3-p00", 50100]]
+# (only needed if use_data_stream is enabled)
+data_stream_targets = [["asap3-p00", 50100]]
 
-# Chunk size of file-parts getting send via zmq
-#1024*1024*10
-chunksize            = 10485760
-
-# Flag describing if the data should be stored in localTarget
+# Flag describing if the data should be stored in local_target
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
-store_data           = False
+store_data = False
 
-# Flag describing if the files should be removed from the source
-# options are:
-# False - data stays on the source
-# True - data is removed from the source after processing it
+# Should the files be removed from the source. Options are:
+# True - data stays on the source
+# False - data is removed from the source after processing it
+# stop_on_error - only supported if use_data_stream is enabled;
+#                 datamanager gets a feedback if the data writing was
+#                 successful.
+#                 When an error occurs the datamanager goes into error state
+#                 till it gets a notification that the error on the data
+#                 receiving side was handled.
+# with_confirmation - only supported if use_data_stream is enabled and
+#                     data_fetcher_type is file_fetcher or http_fetcher;
+#                     data is removed from the source only after the target
+#                     sent a verification.
+#                     In case that a file could not be transfered, it is not
+#                     removed from the source. Here the datamanager does not go
+#                     in error state and new files are transfered if possible.
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
-remove_data          = True
+remove_data = False
