Fixed config description (remove_data)

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -136,8 +136,8 @@ local_target = /opt/hidra/data/target
 #local_target = /gpfs
 
 # Should the files be removed from the source. Options are:
-# True - data stays on the source
-# False - data is removed from the source after processing it
+# False - data stays on the source.
+# True - data is removed from the source after processing it.
 # stop_on_error - only supported if use_data_stream is enabled;
 #                 datamanager gets a feedback if the data writing was
 #                 successful.
