--- a/conf/datamanager_windows.conf
+++ b/conf/datamanager_windows.conf
@@ -102,8 +102,8 @@ data_stream_targets = [["asap3-p00", 50100]]
 store_data = False
 
 # Should the files be removed from the source. Options are:
-# True - data stays on the source
-# False - data is removed from the source after processing it
+# False - data stays on the source.
+# True - data is removed from the source after processing it.
 # stop_on_error - only supported if use_data_stream is enabled;
 #                 datamanager gets a feedback if the data writing was
 #                 successful.
