Changed default config values for windows and pilatus

--- a/conf/datamanager_pilatus.conf
+++ b/conf/datamanager_pilatus.conf
@@ -89,6 +89,9 @@ data_stream_targets = [["asap3-p00", 50100]]
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
 store_data = False
 
+# Target directory to move the files into (needed if store_data is enabled)
+local_target = unknown
+
 # Should the files be removed from the source. Options are:
 # False - data stays on the source.
 # True - data is removed from the source after processing it.
