--- a/conf/datamanager_windows.conf
+++ b/conf/datamanager_windows.conf
@@ -55,7 +55,7 @@ create_fix_subdirs = False
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
 # (needed if event_detector is inotifyx_events or watchdog_events)
-monitored_events = {"IN_CLOSE_WRITE": [""]}
+monitored_events = {"IN_CLOSE_WRITE": ["tif", "metadata"]}
 
 # Number of events stored to look for doubles
 # (needed if event_detector is inotifyx_events or http_events)
@@ -71,13 +71,13 @@ use_cleanup = False
 # (only needed if event_detector_type is inotifyx_events
 # together with use_cleanup enabled or if event_detector is
 # watchdog_events)
-action_time = 10
+action_time = 4
 
 # Time (in seconds) since last modification after which a file
 # will be seen as closed
 # (needed if event_detector is inotifyx_events (for clean up) or
 # watchdog_events)
-time_till_closed = 2
+time_till_closed = 1
 
 # ----------------------------------------------------------------------------
 # DataFetcher Configuration
@@ -100,6 +100,9 @@ data_stream_targets = [["asap3-p00", 50100]]
 # Flag describing if the data should be stored in local_target
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
 store_data = False
+
+# Target directory to move the files into (needed if store_data is enabled)
+local_target = unknown
 
 # Should the files be removed from the source. Options are:
 # False - data stays on the source.
