Fixed subdir creation (added parameter for dirs not to create

--- a/conf/base_receiver.conf
+++ b/conf/base_receiver.conf
@@ -14,7 +14,7 @@ log_size = 104857600
 ldapuri = it-ldap-slave.desy.de:1389
 
 # Subdirectories which should not be created when data is stored
-#fix_subdirs = ["commissioning", "current", "local"]
-fix_subdirs = ["commissioning/raw", "commissioning/scratch_bl",
-               "current/raw", "current/scratch_bl",
-               "local"]
+#dirs_not_to_create = ["commissioning", "current", "local"]
+dirs_not_to_create = ["commissioning/raw", "commissioning/scratch_bl",
+                      "current/raw", "current/scratch_bl",
+                      "local"]
