--- a/conf/base_sender.conf
+++ b/conf/base_sender.conf
@@ -40,6 +40,10 @@ ext_data_port = 50101
 # (needed if event_detector_type is zmq_events)
 event_det_port = 50003
 
+# Subdirectories which should not be created when create_fix_subdirs option is
+# enabled
+dirs_not_to_create = []
+
 # ----------------------------------------------------------------------------
 # datafetcher Configuration
 # ----------------------------------------------------------------------------
