Fixed dockerfiles (pip version)

--- a/conf/datamanager_docker.conf
+++ b/conf/datamanager_docker.conf
@@ -110,7 +110,7 @@ number_of_streams = 1
 
 # Flag describing if the data should be stored in local_target
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
-store_data = True
+store_data = False
 
 # Target directory to move the files into (needed if store_data is enabled)
 local_target = /target
