--- a/docker/Dockerfile.sender
+++ b/docker/Dockerfile.sender
@@ -3,10 +3,8 @@ FROM ubuntu
 RUN apt update && apt install -y \
     git \
     python \
-    python-pip \
-    vim \
-    iputils-ping
-RUN pip install --upgrade pip && pip install \
+    python-pip
+RUN pip install --upgrade pip==9.0.3 && pip install \
     pyzmq \
     setproctitle \
     six \
@@ -16,4 +14,4 @@ RUN cd /opt && \
     cd hidra && \
     git checkout develop && \
     mkdir /var/log/hidra
-ENTRYPOINT ["python", "/opt/hidra/src/sender/datamanager.py", "--verbose", "--config_file", "/opt/hidra/conf/datamanager_docker.conf"]
+ENTRYPOINT ["python", "/opt/hidra/src/sender/datamanager.py", "--verbose", "--config_file", "/opt/hidra/conf/datamanager_docker.conf", "--onscreen", "debug"]
