--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -4,7 +4,7 @@ RUN apt update && apt install -y \
     git \
     python \
     python-pip
-RUN pip install --upgrade pip && pip install \
+RUN pip install --upgrade pip==9.0.3 && pip install \
     pyzmq
 RUN cd /opt && git clone https://stash.desy.de/scm/hidra/hidra.git
 RUN cd /opt/hidra && git checkout develop
