--- a/docker/Dockerfile.receiver
+++ b/docker/Dockerfile.receiver
@@ -3,9 +3,8 @@ FROM ubuntu
 RUN apt update && apt install -y \
     git \
     python \
-    python-pip \
-    vim
-RUN pip install --upgrade pip && pip install \
+    python-pip
+RUN pip install --upgrade pip==9.0.3 && pip install \
     pyzmq \
     setproctitle \
     six
@@ -14,4 +13,4 @@ RUN cd /opt && \
     cd hidra && \
     git checkout develop && \
     mkdir /var/log/hidra
-ENTRYPOINT ["python", "/opt/hidra/src/receiver/datareceiver.py", "--verbose", "--config_file", "/opt/hidra/conf/datareceiver_docker.conf"]
+ENTRYPOINT ["python", "/opt/hidra/src/receiver/datareceiver.py", "--verbose", "--config_file", "/opt/hidra/conf/datareceiver_docker.conf", , "--onscreen", "debug"]
