fixed bumpversion script

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,10 +4,9 @@ tag = False
 commit = False
 files = freeze_setup.py src/APIs/hidra/_version.py src/shared/_version.py
 
-[bumpversion:file:docs/ReleaseNotes.txt]
+[bumpversion:file:HISTORY.md]
 search = HiDRA develop
-replace = HiDRA develop
-	HiDRA {new_version}
+replace = HiDRA {new_version}
 
 [bumpversion:file:hidra.spec]
 search = %changelog
