Fixed bump version config for HISTORY.md

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -6,7 +6,8 @@ files = freeze_setup.py src/APIs/hidra/_version.py src/shared/_version.py
 
 [bumpversion:file:HISTORY.md]
 search = HiDRA develop
-replace = HiDRA {new_version}
+replace = HiDRA develop
+	# HiDRA {new_version}
 
 [bumpversion:file:hidra.spec]
 search = %changelog
