Changed whitelist default for windows to localhost

--- a/conf/datamanager_windows.conf
+++ b/conf/datamanager_windows.conf
@@ -21,7 +21,7 @@ ext_ip = 0.0.0.0
 # [] - Nobody is allowed to connect
 # [<host>, <host>] - The hosts in the list are allowed to connect.
 # None - Everybody is allowed to connect.
-whitelist = None
+whitelist = ["localhost"]
 
 # ----------------------------------------------------------------------------
 # EventDetector Configuration
