--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -15,3 +15,7 @@ replace = %changelog
 	* {now:%a %b %d %Y} Manuela Kuhn <manuela.kuhn@desy.de> - {new_version}-1
 	- Bump version
 
+[bumpversion:file:debian/changelog]
+search = bumpversion_placeholder
+replace =
+
