--- a/.bumpversion_prework.cfg
+++ b/.bumpversion_prework.cfg
@@ -7,3 +7,12 @@ commit = False
 search = Version:	{current_version}
 replace = Version:	{new_version}
 
+[bumpversion:file:debian/changelog]
+search = hidra ({current_version}-
+replace = hidra ({new_version}-1) stretch; urgency=low
+	bumpversion_placeholder
+	bumpversion_placeholder  * Bump version
+	bumpversion_placeholder
+	bumpversion_placeholder -- M. Kuhn <manuela.kuhn@desy.de>  {now:%a, %d %b %Y %H:%M:%S %z}
+	hidra ({current_version}-
+
