Fixed default config

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -24,8 +24,8 @@ ext_ip = 0.0.0.0
 # [<host>, <host>] - The hosts in the list are allowed to connect.
 # None - Everybody is allowed to connect.
 #whitelist = []
-#whitelist = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "lsdma-lab04"]
-whitelist = None
+#whitelist = ["localhost"]
+#whitelist = None
 
 # ----------------------------------------------------------------------------
 # EventDetector Configuration
@@ -128,8 +128,8 @@ number_of_streams = 8
 
 # Flag describing if the data should be stored in local_target
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
-#store_data = False
-store_data = True
+store_data = False
+#store_data = True
 
 # Target directory to move the files into (needed if store_data is enabled)
 local_target = /opt/hidra/data/target
