--- a/conf/datareceiver.conf
+++ b/conf/datareceiver.conf
@@ -21,17 +21,15 @@ procname = hidra-receiver
 
 # List of hosts allowed to receive data from
 #whitelist = a3p00-hosts
-whitelist = None
-#whitelist = ["localhost", "zitpcx19282.desy.de", "zitpcx22614", "zitpcx22614w", "lsdma-lab04", "zitpcx17858"]
-#whitelist = ["localhost"]
+#whitelist = None
+whitelist = ["localhost"]
+#whitelist = []
 
 # Where incoming data will be stored to
 target_dir = /opt/hidra/data/zmq_target
 
 # Local IP to connect dataStream to
 data_stream_ip = localhost
-#data_stream_ip = zitpcx22614w.desy.de
-#data_stream_ip = zitpcx19282.desy.de
 #data_stream_ip = asap3-p00
 
 # TCP port of data pipe
