Fixed default whitelist in datamanager

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -24,7 +24,7 @@ ext_ip = 0.0.0.0
 # [<host>, <host>] - The hosts in the list are allowed to connect.
 # None - Everybody is allowed to connect.
 #whitelist = []
-#whitelist = ["localhost"]
+whitelist = ["localhost"]
 #whitelist = None
 
 # ----------------------------------------------------------------------------
