--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,9 +5,9 @@ commit = False
 files = freeze_setup.py src/APIs/hidra/_version.py src/shared/_version.py
 
 [bumpversion:file:HISTORY.md]
-search = HiDRA develop
-replace = HiDRA develop
-	# HiDRA {new_version}
+search = # develop
+replace = # develop
+	# {new_version}
 
 [bumpversion:file:hidra.spec]
 search = %changelog
@@ -17,5 +17,5 @@ replace = %changelog
 
 [bumpversion:file:debian/changelog]
 search = bumpversion_placeholder
-replace = 
+replace =
 
