Fixed debian package nameing

--- a/.bumpversion_prework.cfg
+++ b/.bumpversion_prework.cfg
@@ -9,7 +9,7 @@ replace = Version:	{new_version}
 
 [bumpversion:file:debian/changelog]
 search = hidra ({current_version}-
-replace = hidra ({new_version}-1) stretch; urgency=low
+replace = hidra ({new_version}-1+deb9u5~fsec) stretch; urgency=low
 	bumpversion_placeholder
 	bumpversion_placeholder  * Bump version
 	bumpversion_placeholder
