--- a/conf/base_receiver.conf
+++ b/conf/base_receiver.conf
@@ -14,10 +14,11 @@ log_size = 104857600
 ldapuri = it-ldap-slave.desy.de:1389
 
 # Time (in s) to wait for the next netgroup check if the last check retuned an
-# empty list (e.g. LDAP timeout)
+# empty list (e.g. LDAP timeout). Has to be bigger than 2.
 ldap_retry_time = 10
 
-# Time (in s) to wait till the next netgroup check to look for netgroup changes
+# Time (in s) to wait till the next netgroup check to look for netgroup
+# changes. Has to be bigger than 2.
 netgroup_check_time = 2
 
 # Subdirectories which should not be created when data is stored
