Improved example environment and misc clean up

--- a/conf/base_sender.conf
+++ b/conf/base_sender.conf
@@ -23,7 +23,7 @@ request_port = 50001
 # (needed if running on Windows)
 request_fw_port = 50002
 
-# ZMQ port to disribute control signals
+# ZMQ port to distribute control signals
 # (needed if running on Windows)
 control_pub_port = 50005
 control_sub_port = 50006
