--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,7 +2,7 @@
 current_version = 4.0.15
 tag = False
 commit = False
-files = freeze_setup.py src/APIs/hidra/_version.py src/shared/_version.py
+files = freeze_setup.py src/APIs/utils/_version.py
 
 [bumpversion:file:HISTORY.md]
 search = # develop
