Removed underscore from event_detector and data_fetcher

--- a/conf/base_sender.conf
+++ b/conf/base_sender.conf
@@ -33,11 +33,11 @@ control_sub_port = 50006
 # ----------------------------------------------------------------------------
 
 # ZMQ port to get incoming data from
-# (needed if event_detector_type is hidra_events)
+# (needed if eventdetector_type is hidra_events)
 ext_data_port = 50101
 
 # ZMQ port to get events from
-# (needed if event_detector_type is zmq_events)
+# (needed if eventdetector_type is zmq_events)
 event_det_port = 50003
 
 # Subdirectories which should not be created when create_fix_subdirs option is
@@ -48,18 +48,18 @@ dirs_not_to_create = []
 # datafetcher Configuration
 # ----------------------------------------------------------------------------
 
-# If "zmq_fetcher" is specified as data_fetcher_type it needs a port to listen
+# If "zmq_fetcher" is specified as datafetcher_type it needs a port to listen
 # to
-# (needed if event_detector_type is zmq_events or if on windows and
-#  event_detector_type is http_events)
-data_fetcher_port = 50010
+# (needed if eventdetector_type is zmq_events or if on windows and
+#  eventdetector_type is http_events)
+datafetcher_port = 50010
 
 # Test signal port to notify the data sender about problems
-# (needed if event_detector_type is hidra_events)
+# (needed if eventdetector_type is hidra_events)
 status_check_resp_port = 50011
 
 # Confirmation socket to send a confirmation for each data message sent
-# (needed if event_detector_type is hidra_events)
+# (needed if eventdetector_type is hidra_events)
 confirmation_resp_port = 50012
 
 # Chunk size of file-parts getting send via zmq
