--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -35,11 +35,11 @@ whitelist = ["localhost"]
 # inotifyx_events, watchdog_events, zmq_events, http_events)
 # Inotifyx is not python3 compatible,
 # see https://bugs.launchpad.net/inotifyx/+bug/1006053
-event_detector_type = inotifyx_events
-#event_detector_type = watchdog_events
-#event_detector_type = http_events
-#event_detector_type = hidra_events
-#event_detector_type = zmq_events
+eventdetector_type = inotifyx_events
+#eventdetector_type = watchdog_events
+#eventdetector_type = http_events
+#eventdetector_type = hidra_events
+#eventdetector_type = zmq_events
 
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current"
@@ -51,8 +51,8 @@ monitored_dir = /opt/hidra/data/source
 
 # Subdirectories to be monitored and to store data to. These directory have to
 # exist when HiDRA is started and should not be removed during the run.
-# (needed if event_detector is inotifyx_events or watchdog_events
-#  or if data_fetcher is file_fetcher)
+# (needed if eventdetector is inotifyx_events or watchdog_events
+#  or if datafetcher is file_fetcher)
 #fix_subdirs = ["commissioning", "current", "local"]
 fix_subdirs = ["commissioning/raw", "commissioning/scratch_bl",
                "current/raw", "current/scratch_bl",
@@ -65,7 +65,7 @@ create_fix_subdirs = False
 
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
-# (needed if event_detector is inotifyx_events or watchdog_events)
+# (needed if eventdetector is inotifyx_events or watchdog_events)
 monitored_events = {"IN_CLOSE_WRITE": [""]}
 #monitored_events = {"IN_CLOSE_WRITE": [".tif", ".cbf", ".nxs"],
 #                    "IN_MOVED_TO": [".log"]}
@@ -74,32 +74,32 @@ monitored_events = {"IN_CLOSE_WRITE": [""]}
 #monitored_events = {"NO_EVENT_MONITORED": [".cbf"]}
 
 # Number of events stored to look for doubles
-# (needed if event_detector is inotifyx_events or http_events)
+# (needed if eventdetector is inotifyx_events or http_events)
 #history_size = 2000
 history_size = 0
 
 # Flag describing if a clean up thread which regularly checks
 # if some files were missed should be activated
-# (needed if event_detector is inotifyx_events)
+# (needed if eventdetector is inotifyx_events)
 use_cleanup = False
 
 # Interval time (in seconds) used for clean up resp. checking of events
-# (only needed if event_detector_type is inotifyx_events together with
-#  use_cleanup enabled or if event_detector is watchdog_events)
+# (only needed if eventdetector_type is inotifyx_events together with
+#  use_cleanup enabled or if eventdetector is watchdog_events)
 #action_time = 150
 action_time = 10
 
 # Time (in seconds) since last modification after which a file
 # will be seen as closed
-# (needed if event_detector is inotifyx_events (for clean up) or
+# (needed if eventdetector is inotifyx_events (for clean up) or
 #  watchdog_events)
 time_till_closed = 2
 
 # IP/DNS name of the detector
-# (needed if event_detector_type is http_events)
+# (needed if eventdetector_type is http_events)
 det_ip = asap3-mon
 # API version of the detector
-# (needed if event_detector_type is http_events)
+# (needed if eventdetector_type is http_events)
 det_api_version = 1.6.0
 
 # ----------------------------------------------------------------------------
@@ -108,10 +108,10 @@ det_api_version = 1.6.0
 
 # Module with methods specifying how to get the data
 # (options are "file_fetcher", "zmq_fetcher", "http_fetcher")
-data_fetcher_type = file_fetcher
-#data_fetcher_type = http_fetcher
-#data_fetcher_type = hidra_fetcher
-#data_fetcher_type = zmq_fetcher
+datafetcher_type = file_fetcher
+#datafetcher_type = http_fetcher
+#datafetcher_type = hidra_fetcher
+#datafetcher_type = zmq_fetcher
 
 # Enable ZMQ pipe into storage system
 #use_data_stream = True
@@ -125,7 +125,7 @@ data_stream_targets = [["asap3-p00", 50100]]
 number_of_streams = 8
 
 # Flag describing if the data should be stored in local_target
-# (needed if data_fetcher_type is file_fetcher or http_fetcher)
+# (needed if datafetcher_type is file_fetcher or http_fetcher)
 store_data = False
 #store_data = True
 
@@ -143,7 +143,7 @@ local_target = /opt/hidra/data/target
 #                 till it gets a notification that the error on the data
 #                 receiving side was handled.
 # with_confirmation - only supported if use_data_stream is enabled and
-#                     data_fetcher_type is file_fetcher or http_fetcher;
+#                     datafetcher_type is file_fetcher or http_fetcher;
 #                     data is removed from the source only after the target
 #                     sent a verification.
 #                     In case that a file could not be transfered, it is not
