--- a/conf/datamanager_pilatus.conf
+++ b/conf/datamanager_pilatus.conf
@@ -31,7 +31,7 @@ whitelist = ["localhost"]
 # inotifyx_events, watchdog_events, zmq_events, http_events)
 # Inotifyx is not python3 compatible,
 # see https://bugs.launchpad.net/inotifyx/+bug/1006053
-event_detector_type = inotifyx_events
+eventdetector_type = inotifyx_events
 
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current"
@@ -41,8 +41,8 @@ monitored_dir = /ramdisk
 
 # Subdirectories to be monitored and to store data to. These directory have to
 # exist when HiDRA is started and should not be removed during the run.
-# (needed if event_detector is inotifyx_events or watchdog_events
-#  or if data_fetcher is file_fetcher)
+# (needed if eventdetector is inotifyx_events or watchdog_events
+#  or if datafetcher is file_fetcher)
 fix_subdirs = ["commissioning/raw", "commissioning/scratch_bl",
                "current/raw", "current/scratch_bl",
                "local"]
@@ -54,17 +54,17 @@ create_fix_subdirs = False
 
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
-# (needed if event_detector is inotifyx_events or watchdog_events)
+# (needed if eventdetector is inotifyx_events or watchdog_events)
 monitored_events = {"IN_MOVED_TO": [".tif", ".cbf", ".img", ".edf"],
                     "IN_CLOSE_WRITE": [".log"]}
 
 # Number of events stored to look for doubles
-# (needed if event_detector is inotifyx_events or http_events)
+# (needed if eventdetector is inotifyx_events or http_events)
 history_size = 0
 
 # Flag describing if a clean up thread which regularly checks
 # if some files were missed should be activated
-# (needed if event_detector is inotifyx_events)
+# (needed if eventdetector is inotifyx_events)
 use_cleanup = False
 
 # ----------------------------------------------------------------------------
@@ -73,7 +73,7 @@ use_cleanup = False
 
 # Module with methods specifying how to get the data
 # (options are "file_fetcher", "zmq_fetcher", "http_fetcher")
-data_fetcher_type = file_fetcher
+datafetcher_type = file_fetcher
 
 # Enable ZMQ pipe into storage system
 use_data_stream = True
@@ -86,7 +86,7 @@ number_of_streams = 4
 data_stream_targets = [["asap3-p00", 50100]]
 
 # Flag describing if the data should be stored in local_target
-# (needed if data_fetcher_type is file_fetcher or http_fetcher)
+# (needed if datafetcher_type is file_fetcher or http_fetcher)
 store_data = False
 
 # Target directory to move the files into (needed if store_data is enabled)
@@ -102,11 +102,11 @@ local_target = unknown
 #                 till it gets a notification that the error on the data
 #                 receiving side was handled.
 # with_confirmation - only supported if use_data_stream is enabled and
-#                     data_fetcher_type is file_fetcher or http_fetcher;
+#                     datafetcher_type is file_fetcher or http_fetcher;
 #                     data is removed from the source only after the target
 #                     sent a verification.
 #                     In case that a file could not be transfered, it is not
 #                     removed from the source. Here the datamanager does not go
 #                     in error state and new files are transfered if possible.
-# (needed if data_fetcher_type is file_fetcher or http_fetcher)
+# (needed if datafetcher_type is file_fetcher or http_fetcher)
 remove_data = False
