--- a/conf/datamanager_windows.conf
+++ b/conf/datamanager_windows.conf
@@ -31,7 +31,7 @@ whitelist = ["localhost"]
 # inotifyx_events, watchdog_events, zmq_events, http_events)
 # Inotifyx is not python3 compatible,
 # see https://bugs.launchpad.net/inotifyx/+bug/1006053
-event_detector_type = watchdog_events
+eventdetector_type = watchdog_events
 
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current"
@@ -41,8 +41,8 @@ monitored_dir = D:\hidra\data\source
 
 # Subdirectories to be monitored and to store data to. These directory have to
 # exist when HiDRA is started and should not be removed during the run.
-# (needed if event_detector is inotifyx_events or watchdog_events
-#  or if data_fetcher is file_fetcher)
+# (needed if eventdetector is inotifyx_events or watchdog_events
+#  or if datafetcher is file_fetcher)
 fix_subdirs = ["commissioning\raw", "commissioning\scratch_bl",
                "current\raw", "current\scratch_bl",
                "local"]
@@ -54,28 +54,28 @@ create_fix_subdirs = False
 
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
-# (needed if event_detector is inotifyx_events or watchdog_events)
+# (needed if eventdetector is inotifyx_events or watchdog_events)
 monitored_events = {"IN_CLOSE_WRITE": ["tif", "metadata"]}
 
 # Number of events stored to look for doubles
-# (needed if event_detector is inotifyx_events or http_events)
+# (needed if eventdetector is inotifyx_events or http_events)
 history_size = 0
 
 # Flag describing if a clean up thread which regularly checks
 # if some files were missed should be activated
-# (needed if event_detector is inotifyx_events)
+# (needed if eventdetector is inotifyx_events)
 use_cleanup = False
 
 # Interval time (in seconds) used for clean up resp. checking of
 # events
-# (only needed if event_detector_type is inotifyx_events
-# together with use_cleanup enabled or if event_detector is
+# (only needed if eventdetector_type is inotifyx_events
+# together with use_cleanup enabled or if eventdetector is
 # watchdog_events)
 action_time = 4
 
 # Time (in seconds) since last modification after which a file
 # will be seen as closed
-# (needed if event_detector is inotifyx_events (for clean up) or
+# (needed if eventdetector is inotifyx_events (for clean up) or
 # watchdog_events)
 time_till_closed = 1
 
@@ -85,7 +85,7 @@ time_till_closed = 1
 
 # Module with methods specifying how to get the data
 # (options are "file_fetcher", "zmq_fetcher", "http_fetcher")
-data_fetcher_type = file_fetcher
+datafetcher_type = file_fetcher
 
 # Enable ZMQ pipe into storage system
 use_data_stream = True
@@ -98,7 +98,7 @@ number_of_streams = 4
 data_stream_targets = [["asap3-p00", 50100]]
 
 # Flag describing if the data should be stored in local_target
-# (needed if data_fetcher_type is file_fetcher or http_fetcher)
+# (needed if datafetcher_type is file_fetcher or http_fetcher)
 store_data = False
 
 # Target directory to move the files into (needed if store_data is enabled)
@@ -114,11 +114,11 @@ local_target = unknown
 #                 till it gets a notification that the error on the data
 #                 receiving side was handled.
 # with_confirmation - only supported if use_data_stream is enabled and
-#                     data_fetcher_type is file_fetcher or http_fetcher;
+#                     datafetcher_type is file_fetcher or http_fetcher;
 #                     data is removed from the source only after the target
 #                     sent a verification.
 #                     In case that a file could not be transfered, it is not
 #                     removed from the source. Here the datamanager does not go
 #                     in error state and new files are transfered if possible.
-# (needed if data_fetcher_type is file_fetcher or http_fetcher)
+# (needed if datafetcher_type is file_fetcher or http_fetcher)
 remove_data = False
