--- a/test/datamanager.conf
+++ b/test/datamanager.conf
@@ -1,142 +1,129 @@
 # ------------------------------------------------------------------------
-# Logging Configuration
+# General Configuration
 # ------------------------------------------------------------------------
 
 # Path where the logfile will be created
-log_path            = /opt/hidra/logs
+log_path = /opt/hidra/logs
 
 # Filename used for logging
-log_name            = dataManager.log
+log_name = datamanager.log
 
-# File size before rollover in B (linux only)
-# 10 MB
-log_size            = 10485760
+# User as which the service should be running
+#username = hidrauser
 
 # Name with which the service should be running
-procname            = hidra
+procname = hidra
 
-# IP of the interface to bind to for external communication
-ext_ip              = 0.0.0.0
+# IP/DNS name of the interface to bind to for external communication
+ext_ip = 0.0.0.0
+#ext_ip = asap3-p00
 
-# ------------------------------------------------------------------------
-# SignalHandler Configuration
-# ------------------------------------------------------------------------
+# List of hosts allowed to connect. Options are:
+# [] - Nobody is allowed to connect
+# [<host>, <host>] - The hosts in the list are allowed to connect.
+# None - Everybody is allowed to connect.
+whitelist = ["localhost"]
 
-# Port number to receive signals from
-com_port            = 50000
-
-# List of hosts allowed to connect
-whitelist           = ["localhost", "zitpcx19282"]
-
-# ZMQ port to get new requests
-request_port        = 50001
-
-# ZMQ port to forward requests
-# (needed if running on Windows)
-request_fw_port     = 50002
-
-# ZMQ port to disribute control signals
-# (needed if running on Windows)
-control_pub_port    = 50005
-control_sub_port    = 50006
-
-# ------------------------------------------------------------------------
+# ----------------------------------------------------------------------------
 # EventDetector Configuration
-# ------------------------------------------------------------------------
+# ----------------------------------------------------------------------------
 
 # Type of event detector to use (options are:
 # inotifyx_events, watchdog_events, zmq_events, http_events)
 # Inotifyx is not python3 compatible,
 # see https://bugs.launchpad.net/inotifyx/+bug/1006053
-event_detector_type = inotifyx_events
-#event_detector_type = watchdog_events
-#event_detector_type = zmq_events
-#event_detector_type = http_events
-
-# Subdirectories to be monitored and to store data to
-# (needed if eventDetector is inotifyx_events or watchdog_events
-#  or if dataFetcher is file_fetcher)
-fix_subdirs          = ["commissioning", "current", "local"]
+eventdetector_type = inotifyx_events
 
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current"
 # and "local" are monitored
 # (needed if event detector is inotifyx_events or watchdog_events)
-monitored_dir        = /opt/hidra/data/source
+monitored_dir = /opt/hidra/data/source
+
+# Subdirectories to be monitored and to store data to. These directory have to
+# exist when HiDRA is started and should not be removed during the run.
+# (needed if eventdetector is inotifyx_events or watchdog_events
+#  or if datafetcher is file_fetcher)
+fix_subdirs = ["commissioning", "current", "local"]
+
+# Flag describing if the subdirectories should be created if they do not exist.
+# This does not affect http_events, hidra_events, zmq_events since they do not
+# use the monitored_dir variable
+create_fix_subdirs = False
 
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
-# (needed if event detector is inotifyx_events or watchdog_events)
-monitored_events     = {"IN_CLOSE_WRITE": [".tif", ".cbf", ".nxs"],
-                        "IN_MOVED_TO": [".log"]}
+# (needed if eventdetector is inotifyx_events or watchdog_events)
+monitored_events = {"IN_CLOSE_WRITE": [".tif", ".cbf", ".nxs"],
+                    "IN_MOVED_TO": [".log"]}
 
 # Number of events stored to look for doubles
-# (needed if eventDetector is inotifyx_events or http_events)
-history_size         = 0
+# (needed if eventdetector is inotifyx_events or http_events)
+#history_size = 2000
+history_size = 0
 
 # Flag describing if a clean up thread which regularly checks
 # if some files were missed should be activated
-# (needed if eventDetector is inotifyx_events)
-use_cleanup          = False
+# (needed if eventdetector is inotifyx_events)
+use_cleanup = False
 
-# Intervall time (in seconds) used for clean up resp. checking of events
-# (only needed if event_detector_type is inotifyx_events or watchdog_events)
-action_time          = 10
+# Interval time (in seconds) used for clean up resp. checking of events
+# (only needed if eventdetector_type is inotifyx_events together with
+#  use_cleanup enabled or if eventdetector is watchdog_events)
+action_time = 10
 
-# Time (in seconds) since last modification after which a file will be seen as closed
-# (needed if eventDetector is inotifyx_events (for clean up) or watchdog_events)
-time_till_closed     = 2
+# Time (in seconds) since last modification after which a file
+# will be seen as closed
+# (needed if eventdetector is inotifyx_events (for clean up) or
+#  watchdog_events)
+time_till_closed = 2
 
-# ZMQ port to get events from
-# (needed if event_detector_type is zmq_events)
-event_det_port       = 50003
-
-# IP of the detector
-# (needed if event_detector_type is http_events)
-det_ip             = lsdma-lab04
+# IP/DNS name of the detector
+# (needed if eventdetector_type is http_events)
+det_ip = asap3-mon
 # API version of the detector
-# (needed if event_detector_type is http_events)
-det_api_version    = 1.5.0
+# (needed if eventdetector_type is http_events)
+det_api_version = 1.6.0
 
-# ------------------------------------------------------------------------
-# DataFetcher Configuration
-# ------------------------------------------------------------------------
+# ----------------------------------------------------------------------------
+#    datafetcher Configuration
+# ----------------------------------------------------------------------------
 
 # Module with methods specifying how to get the data
 # (options are "file_fetcher", "zmq_fetcher", "http_fetcher")
-data_fetcher_type    = file_fetcher
-#data_fetcher_type    = zmq_fetcher
-#data_fetcher_type    = http_fetcher
-
-# If "zmq_fetcher" is specified as data_fetcher_type it needs a port to listen to
-# (needed if event_detector_type is zmq_events)
-data_fetcher_port    = 50010
-
-# Number of parallel data streams
-number_of_streams    = 1
+datafetcher_type = file_fetcher
 
 # Enable ZMQ pipe into storage system
-# (uses data_stream_targets)
-use_data_stream      = False
+use_data_stream = False
+
 # Fixed host and port to send the data to with highest priority
-data_stream_targets  = [["zitpcx19282", 50100]]
-#data_stream_targets  = [["zitpcx22614w", 50100]]
+# (only needed if use_data_stream is enabled)
+data_stream_targets = [["localhost", 50100]]
 
-# Chunk size of file-parts getting send via zmq
-#1024*1024*10
-chunksize            = 10485760
+# Number of parallel data streams
+number_of_streams = 1
 
-# ZMQ-router port which coordinates the load-balancing to the worker-processes
-# (needed if running on Windows)
-router_port          = 50004
+# Flag describing if the data should be stored in local_target
+# (needed if datafetcher_type is file_fetcher or http_fetcher)
+store_data = False
 
-# Target to move the files into
-local_target         = /opt/hidra/data/target
+# Target directory to move the files into (needed if store_data is enabled)
+local_target = /opt/hidra/data/target
 
-# Flag describing if the data should be stored in localTarget
-# (needed if data_fetcher_type is file_fetcher or http_fetcher)
-store_data           = False
-
-# Flag describing if the files should be removed from the source
-# (needed if data_fetcher_type is file_fetcher or http_fetcher)
-remove_data          = False
+# Should the files be removed from the source. Options are:
+# False - data stays on the source.
+# True - data is removed from the source after processing it.
+# stop_on_error - only supported if use_data_stream is enabled;
+#                 datamanager gets a feedback if the data writing was
+#                 successful.
+#                 When an error occurs the datamanager goes into error state
+#                 till it gets a notification that the error on the data
+#                 receiving side was handled.
+# with_confirmation - only supported if use_data_stream is enabled and
+#                     datafetcher_type is file_fetcher or http_fetcher;
+#                     data is removed from the source only after the target
+#                     sent a verification.
+#                     In case that a file could not be transfered, it is not
+#                     removed from the source. Here the datamanager does not go
+#                     in error state and new files are transfered if possible.
+remove_data = False
