--- a/conf/base_sender.conf
+++ b/conf/base_sender.conf
@@ -38,7 +38,7 @@ ext_data_port = 50101
 
 # ZMQ port to get events from
 # (needed if eventdetector_type is zmq_events)
-event_det_port = 50003
+eventdetector_port = 50003
 
 # Subdirectories which should not be created when create_fix_subdirs option is
 # enabled
