--- a/conf/control_server.yaml
+++ b/conf/control_server.yaml
@@ -1,4 +1,4 @@
-general:
+controlserver:
     #log_path: &log_path /var/log/hidra
     log_path: &log_path /home/kuhnm/projects/hidra/logs
     log_size: 10485760
@@ -11,43 +11,49 @@ general:
     backup_file: /home/kuhnm/projects/hidra/instances.txt
 
     # use {bl} as placeholder for the beamline and {det} for the detector
-    hidra_config_name: datamanager_{bl}_{det}.conf
+    hidra_config_name: datamanager_{bl}_{det}.yaml
+#    hidra_config_name: datamanager_{bl}_{det}.conf
 
 hidraconfig_static:
-    log_path: *log_path
-    log_size: 10485760
-    com_port: 50000
-    request_port: 50001
-    fix_subdirs:
-        - current/raw
-        - current/scratch_bl
-        - commissioning/raw
-        - commissioning/scratch_bl
-        - local
-    use_cleanup: False
-    action_time: 150
-    time_till_closed: 2
-    number_of_streams: 32
-    use_data_stream: False
-    chunksize: 10485760
-
-    eventdetector_type: http_events
-    datafetcher_type: http_fetcher
-
-    # eventdetector_type: inotifyx_events
-    # datafetcher_type: file_fetcher
-    # monitored_dir: /home/kuhnm/projects/hidra/data/source
-    # monitored_events:
-    #     IN_CLOSE_WRITE :
-    #         - .tif
-    #         - .cbf
-    #         - .nxs
+    general:
+        log_path: *log_path
+        log_size: 10485760
+        com_port: 50000
+        request_port: 50001
+    eventdetector:
+        eventdetector_type: http_events
+        # eventdetector_type: inotifyx_events
+        inotifyx_events:
+            # monitored_dir: /home/kuhnm/projects/hidra/data/source
+            fix_subdirs: &fix_subdirs
+                - current/raw
+                - current/scratch_bl
+                - commissioning/raw
+                - commissioning/scratch_bl
+                - local
+            # monitored_events:
+            #     IN_CLOSE_WRITE :
+            #         - .tif
+            #         - .cbf
+            #         - .nxs
+            use_cleanup: False
+            action_time: 150
+            time_till_closed: 2
+        http_events:
+            fix_subdirs: *fix_subdirs
+    datafetcher:
+        datafetcher_type: http_fetcher
+        # datafetcher_type: file_fetcher
+        use_data_stream: False
+        number_of_streams: 32
+        chunksize: 10485760
 
 hidraconfig_variable:
 # use {bl} as placeholder for the beamline
-
-    log_name: datamanager_{bl}
-    local_target: /beamline/{bl}
-    procname: hidra_{bl}
-    # quotes needed because placeholder is at the beginning
-    username: "{bl}user"
+    general:
+        log_name: datamanager_{bl}
+        procname: hidra_{bl}
+        # quotes needed because placeholder is at the beginning
+        username: "{bl}user"
+    datafetcher:
+        local_target: /beamline/{bl}
