Add debug information for WindowsError
In some rare cases a file cannot be removed after processing it. For
debugging reasons the open file handles are logged using the Windows
Handle tool
(https://docs.microsoft.com/en-us/sysinternals/downloads/handle)

--- a/conf/datamanager_windows.conf
+++ b/conf/datamanager_windows.conf
@@ -79,6 +79,10 @@ action_time = 4
 # watchdog_events)
 time_till_closed = 1
 
+# Path of the handler tool
+# used for debugging open file handler in file_fetcher
+windows_handle_path = H:\public\Handle\handle64
+
 # ----------------------------------------------------------------------------
 # DataFetcher Configuration
 # ----------------------------------------------------------------------------
