Fix hidra usage via docker
The dockerfiles have to be updated for the new dependencies. In addition
to be able to modify the config file used inside the docker container
hidra is not cloned inside the container anymore but rather mapped into
it. Due to the special setup of docker inside the desy environment
additional parameters are needed and to handle this convinently a
hidra_docker script is added.

--- a/conf/datamanager_docker.conf
+++ b/conf/datamanager_docker.conf
@@ -3,13 +3,13 @@
 # ------------------------------------------------------------------------
 
 # Path where the logfile will be created
-log_path = /var/log/hidra
+log_path = /opt/hidra/logs
 
 # Filename used for logging
 log_name = datamanager.log
 
 # User as which the service should be running
-username = hidrauser
+#username = hidrauser
 
 # Name with which the service should be running
 procname = hidra
