--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -4,8 +4,7 @@ RUN apt update && apt install -y \
     git \
     python \
     python-pip
-RUN pip install --upgrade pip==9.0.3 && pip install \
-    pyzmq
+RUN pip install pyzmq pathlib2 pyyaml logutils
 RUN cd /opt && git clone https://stash.desy.de/scm/hidra/hidra.git
-RUN cd /opt/hidra && git checkout develop
+# RUN cd /opt/hidra && git checkout develop
 RUN cp -r /opt/hidra/src/APIs/hidra /usr/local/lib/python2.7/dist-packages/
