--- a/conf/datareceiver_docker.conf
+++ b/conf/datareceiver_docker.conf
@@ -3,13 +3,13 @@
 # ------------------------------------------------------------------------
 
 # Path where logfile will be created
-log_path = /var/log/hidra
+log_path = /opt/hidra/logs
 
 # Filename used for logging
 log_name = datareceiver.log
 
 # User as which the service should be running
-username = hidrauser
+#username = hidrauser
 
 # Name with which the service should be running
 procname = hidra-receiver
