--- a/conf/datamanager_docker.yaml
+++ b/conf/datamanager_docker.yaml
@@ -3,6 +3,7 @@ general:
     log_path: /opt/hidra/logs
 
     # Filename used for logging
+    # (possible placeholders are: date -> YYYY-MM-DD)
     log_name: datamanager.log
 
     # User as which the service should be running
@@ -32,15 +33,13 @@ eventdetector:
 
     inotifyx_events:
         # Directory to be monitor for changes
-        # Inside this directory only the subdirectories "commissioning", "current"
-        # and "local" are monitored
-        # (needed if event detector is inotifyx_events or watchdog_events)
+        # Inside this directory only the subdirectories "commissioning",
+        # "current" and "local" are monitored
         monitored_dir: &monitored_dir /ramdisk
 
-        # Subdirectories to be monitored and to store data to. These directory have to
-        # exist when HiDRA is started and should not be removed during the run.
-        # (needed if eventdetector is inotifyx_events or watchdog_events
-        #  or if datafetcher is file_fetcher)
+        # Subdirectories to be monitored and to store data to. These directory
+        # have to exist when HiDRA is started and should not be removed during
+        # the run.
         fix_subdirs: &fix_subdirs
             - "commissioning/raw"
             - "commissioning/scratch_bl"
@@ -48,64 +47,66 @@ eventdetector:
             - "current/scratch_bl"
             - "local"
 
-        # Flag describing if the subdirectories should be created if they do not exist.
-        # This does not affect http_events, hidra_events, zmq_events since they do not
-        # use the monitored_dir variable
+        # Flag describing if the subdirectories should be created if they do
+        # not exist.
         create_fix_subdirs: &create_fix_subdirs True
 
-        # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
-        # the formats to be monitored, files in an other format will be be neglected
-        # (needed if eventdetector is inotifyx_events or watchdog_events)
+        # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...)
+        # and the formats to be monitored, files in an other format will be be
+        # neglected
         monitored_events: &monitored_events {"IN_CLOSE_WRITE": [""]}
 
+        # Timeout after which the event generator should return if no events
+        # where detected.
+        event_timeout: 1
+
         # Number of events stored to look for doubles
-        # (needed if eventdetector is inotifyx_events or http_events)
         history_size: 0
 
         # Flag describing if a clean up thread which regularly checks
         # if some files were missed should be activated
-        # (needed if eventdetector is inotifyx_events)
         use_cleanup: False
 
         # Interval time (in seconds) used for clean up resp. checking of events
-        # (only needed if eventdetector_type is inotifyx_events together with
-        #  use_cleanup enabled or if eventdetector is watchdog_events)
+        # (only needed if use_cleanup is enabled)
         action_time: 2
 
-        # Time (in seconds) since last modification after which a file
-        # will be seen as closed
-        # (needed if eventdetector is inotifyx_events (for clean up) or
-        #  watchdog_events)
+        # Time (in seconds) since last modification after which a file will be
+        # seen as closed
+        # (only needed if use_cleanup is enabled)
         time_till_closed: 1
 
     watchdog_events:
         # Directory to be monitor for changes
-        # Inside this directory only the subdirectories "commissioning", "current"
-        # and "local" are monitored
+        # Inside this directory only the subdirectories "commissioning",
+        # "current" and "local" are monitored
         monitored_dir: *monitored_dir
 
-        # Subdirectories to be monitored and to store data to. These directory have to
-        # exist when HiDRA is started and should not be removed during the run.
+        # Subdirectories to be monitored and to store data to. These directory
+        # have to exist when HiDRA is started and should not be removed during
+        # the run.
         fix_subdirs: *fix_subdirs
 
-        # Flag describing if the subdirectories should be created if they do not exist.
+        # Flag describing if the subdirectories should be created if they do
+        # not exist.
         create_fix_subdirs: *create_fix_subdirs
 
-        # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
-        # the formats to be monitored, files in an other format will be be neglected
-        # (needed if eventdetector is inotifyx_events or watchdog_events)
+        # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...)
+        # and the formats to be monitored, files in an other format will be be
+        # neglected
         monitored_events: *monitored_events
 
         # Interval time (in seconds) used for clean up resp. checking of events
         action_time: 2
 
-        # Time (in seconds) since last modification after which a file
-        # will be seen as closed
+        # Time (in seconds) since last modification after which a file will be
+        # seen as closed
         time_till_closed: 1
 
     http_events:
-        # Subdirectories to be monitored and to store data to. These directory have to
-        # exist when HiDRA is started and should not be removed during the run.
+        # Subdirectories to be monitored and to store data to. These directory
+        # have to exist when HiDRA is started and should not be removed during
+        # the run.
         fix_subdirs: *fix_subdirs
 
         # Number of events stored to look for doubles
@@ -124,8 +125,9 @@ eventdetector:
         # Base directory the files are located
         monitored_dir: "/my_dir"
 
-        # Subdirectories to be monitored and to store data to. These directory have to
-        # exist when HiDRA is started and should not be removed during the run.
+        # Subdirectories to be monitored and to store data to. These directory
+        # have to exist when HiDRA is started and should not be removed during
+        # the run.
         fix_subdirs: *fix_subdirs
 
         # Kafka server to register for events
@@ -157,7 +159,6 @@ eventdetector:
 
 datafetcher:
     # Module with methods specifying how to get the data
-    # (options are "file_fetcher", "zmq_fetcher", "http_fetcher")
     type: file_fetcher
 
     # Enable ZMQ pipe into storage system
@@ -176,16 +177,17 @@ datafetcher:
     # stop_on_error - only supported if use_data_stream is enabled;
     #                 datamanager gets a feedback if the data writing was
     #                 successful.
-    #                 When an error occurs the datamanager goes into error state
-    #                 till it gets a notification that the error on the data
-    #                 receiving side was handled.
+    #                 When an error occurs the datamanager goes into error
+    #                 state till it gets a notification that the error on the
+    #                 data receiving side was handled.
     # with_confirmation - only supported if use_data_stream is enabled and
     #                     datafetcher_type is file_fetcher or http_fetcher;
     #                     data is removed from the source only after the target
     #                     sent a verification.
-    #                     In case that a file could not be transfered, it is not
-    #                     removed from the source. Here the datamanager does not go
-    #                     in error state and new files are transfered if possible.
+    #                     In case that a file could not be transfered, it is
+    #                     not removed from the source. Here the datamanager
+    #                     does not go in error state and new files are
+    #                     transfered if possible.
     remove_data: True
 
     # Flag describing if the data should be stored in local_target
@@ -199,8 +201,9 @@ datafetcher:
         fix_subdirs: *fix_subdirs
 
     http_fetcher:
-        # Subdirectories to be monitored and to store data to. These directory have to
-        # exist when HiDRA is started and should not be removed during the run.
+        # Subdirectories to be monitored and to store data to. These directory
+        # have to exist when HiDRA is started and should not be removed during
+        # the run.
         fix_subdirs: *fix_subdirs
 
     no_data_fetcher:
