Disable setting of default username

--- a/conf/datamanager_windows.yaml
+++ b/conf/datamanager_windows.yaml
@@ -7,7 +7,7 @@ general:
     log_name: datamanager_{date}.log
 
     # User as which the service should be running
-    username: hidrauser
+    #username: hidrauser
 
     # Name with which the service should be running
     procname: hidra
