--- a/conf/datamanager.yaml
+++ b/conf/datamanager.yaml
@@ -8,7 +8,7 @@ general:
     log_name: datamanager.log
 
     # User as which the service should be running
-    username: hidrauser
+    #username: hidrauser
 
     # Name with which the service should be running
     procname: hidra
