--- a/conf/datareceiver.yaml
+++ b/conf/datareceiver.yaml
@@ -8,7 +8,7 @@ general:
     log_name: datareceiver.log
 
     # User as which the service should be running
-    username: hidrauser
+    #username: hidrauser
 
     # Name with which the service should be running
     procname: hidra-receiver
