Fix control server config writing
The produced config file was missing the fix_subdirs entry in the
http fetcher configuration and thus did not start.

--- a/conf/control_server.yaml
+++ b/conf/control_server.yaml
@@ -55,6 +55,8 @@ hidraconfig_static:
         use_data_stream: False
         number_of_streams: 32
         chunksize: 10485760
+        http_fetcher:
+            fix_subdirs: *fix_subdirs
 
 hidraconfig_variable:
 # use {bl} as placeholder for the beamline
