Use one backup file per beamline
Otherwise all control servers have to run as the same user (or root) to
be able to edit the instances file.

--- a/conf/control_server.yaml
+++ b/conf/control_server.yaml
@@ -6,7 +6,8 @@ controlserver:
     log_name: hidra-control-server_{bl}.log
     procname: hidra-control-server_{bl}
 
-    backup_file: /beamline/support/hidra/instances.txt
+    # use {bl} as placeholder for the beamline
+    backup_file: /beamline/support/hidra/instances_{bl}.txt
 
     ldapuri: "it-ldap-slave.desy.de:1389"
 
