--- a/conf/base_receiver.yaml
+++ b/conf/base_receiver.yaml
@@ -6,8 +6,8 @@ general:
     # LDAP node and port needed to check whitelist
     ldapuri: it-ldap-slave.desy.de:1389
 
-    # Time (in s) to wait for the next netgroup check if the last check retuned an
-    # empty list (e.g. LDAP timeout). Has to be bigger than 2.
+    # Time (in s) to wait for the next netgroup check if the last check retuned
+    # an empty list (e.g. LDAP timeout). Has to be bigger than 2.
     ldap_retry_time: 10
 
     # Time (in s) to wait till the next netgroup check to look for netgroup
