--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -5,6 +5,6 @@ RUN apt update && apt install -y \
     python \
     python-pip
 RUN pip install pyzmq pathlib2 pyyaml logutils
-RUN cd /opt && git clone https://stash.desy.de/scm/hidra/hidra.git
+RUN cd /opt && git clone https://github.com/hidra-org/hidra.git
 # RUN cd /opt/hidra && git checkout develop
 RUN cp -r /opt/hidra/src/APIs/hidra /usr/local/lib/python2.7/dist-packages/
