--- a/test/diff_envs/Dockerfile.centos6
+++ b/test/diff_envs/Dockerfile.centos6
@@ -15,7 +15,7 @@ RUN pip install \
     pyyaml \
     argparse
 RUN cd /opt && \
-    git clone https://stash.desy.de/scm/hidra/hidra.git && \
+    git clone https://github.com/hidra-org/hidra.git && \
     cd hidra && \
     git checkout develop && \
     mkdir /var/log/hidra && \
